--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -234,19 +234,21 @@ section.filters {
 .viewport-particles > *,
 .viewport .point-actor.actor-drill-car .sprite,
 .viewport .point-actor:not(.region):not(.actor-water-fall):not(.actor-water-jet):not(.actor-super-ring):not(.actor-drill-car) {
-	--outlineColor: rgba(0,0,0,1);
-	filter:
-		drop-shadow( 1px  1px 0px var(--outlineColor))
-		drop-shadow(-1px  1px 0px var(--outlineColor))
-		drop-shadow(-1px -1px 0px var(--outlineColor))
-		drop-shadow( 1px -1px 0px var(--outlineColor));
+	--outlineWidth:    1px;
+	--outlineWidthNeg: calc(-1 * var(--outlineWidth));
+	--hoverWidth:      calc(2px + var(--outlineWidthNeg));
+	--outlineColor:    rgba(0,0,0,1);
+
+	filter:	drop-shadow( var(--outlineWidth) var(--outlineWidth)   0px var(--outlineColor))
+		drop-shadow( var(--outlineWidth)    var(--outlineWidthNeg) 0px var(--outlineColor))
+		drop-shadow( var(--outlineWidthNeg) var(--outlineWidth)    0px var(--outlineColor))
+		drop-shadow( var(--outlineWidthNeg) var(--outlineWidthNeg) 0px var(--outlineColor));
 }
 
 .controllable.actor-generic:hover:not(.actor-selected),
 .controllable:not(.actor-generic):hover:not(.actor-selected) .sprite {
 	--outlineColor: white !important;
-	filter:
-		drop-shadow(1px 1px 0px var(--outlineColor))
+	filter:	drop-shadow(1px 1px 0px var(--outlineColor))
 		drop-shadow(-1px 1px 0px var(--outlineColor))
 		drop-shadow(-1px -1px 0px var(--outlineColor))
 		drop-shadow(1px -1px 0px var(--outlineColor));
@@ -280,6 +282,7 @@ section.filters {
 
 .viewport-background > div {
 	background-repeat: no-repeat;
+	/*filter: url(#dilate);*/
 	/*border-bottom: 1px solid #CCC;
 	border-right: 1px solid #CCC;
 	box-sizing: border-box;*/
