--- a/app/subspace.css
+++ b/app/subspace.css
@@ -1,10 +1,13 @@
 .console {
+	position: absolute;
+	width: 100%;
+	max-height: 30%;
 	flex-direction: column;
-	min-height: 25%;
-	max-height: 75%;
-	overflow-y: auto;
-	pointer-events: initial;
-	transition: transform 1s ease-in;
+	overflow: auto;
+	transition: transform 0.25s ease-in;
+	background-color: rgba(0,0,25,0.95);
+
+	z-index: 200000;
 	transform: translateY(-100%);
 }
 
@@ -13,6 +16,7 @@
 }
 
 .console:focus-within {
+	box-shadow: 0px 2px 2px rgba(0,0,0,0.85);
 	transform: translateY(-0%);
 }
 
@@ -21,18 +25,14 @@
 }
 
 .terminal {
-	width: 100%;
-	min-height: 100%;
-	max-height: 100%;
-	position: relative;
+	pointer-events: initial;
 	box-sizing: border-box;
 	/*font-family: '8-bit-pusab';*/
 	font-family: 'courer-new', system, terminal, monospace;
+	font-weight: bold;
 	font-size: 4pt;
 	color: white;
-	background-color: rgba(0,0,35,0.75);
 	text-shadow: 1px 1px 0px rgba(0,0,0,1);
-	box-shadow: 0px 2px 2px rgba(0,0,0,0.75);
 }
 
 .terminal .output p {
