--- a/app/actor/point-actor.css
+++ b/app/actor/point-actor.css
@@ -10,10 +10,11 @@
 	--outlineColor:    rgba(0,0,0,1);
 }
 
-.point-actor .labels {
+.point-actor .labels:not(:empty) {
 	z-index: 1000000;
-	opacity: 0.75;
-	width: 100%;
+	background-color: rgba(0,0,0,0.05);
+	min-width: 100%;
+	padding: 2px;
 	position: absolute;
 	bottom: calc(1px * var(--height));
 	transform: rotateY(0deg);
@@ -102,8 +103,15 @@
 	left: 0px;
 }
 
+.actor-item.actor-marble-companion-block .sprite,
 .actor-item.actor-block-marble .sprite {
 	--hoverWidth: -1px;
+}
+
+.actor-item.actor-marble-companion-block .sprite {
+	background-image: url(/Sonic/marble-companion-block.png);
+	width: 32px;
+	height: 32px;
 }
 
 .actor-item.actor-block .sprite,
