--- a/app/Menu/main-menu.css
+++ b/app/Menu/main-menu.css
@@ -17,17 +17,18 @@
 	opacity: 0;
 }
 
-.screen-card-main-menu :focus,
-.screen-card-main-menu .focused{
+.screen-card-main-menu :not(textarea):not(input):not(button):focus,
+.screen-card-main-menu .focused {
 	/*outline: 1px solid rgba(255,255,255,0.2);
 	outline-offset: 0.6em;*/
+	text-decoration: underline;
 	outline: none;
 	color: white;
-	text-decoration: underline;
 }
 
+
 .screen-card-main-menu li {
-	color: #999;
+	color: #CCC;
 	margin-top: 1em;
 	margin-bottom: 1em;
 	cursor: pointer;
@@ -88,4 +89,133 @@
 @keyframes menu-bg-scroll {
 	0%   { background-position-x: 0px; }
 	100% { background-position-x: 96px; }
+}
+
+
+.screen-card-main-menu .token-exchange {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+
+	width: 100%;
+	height: 100%;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.screen-card-main-menu .token-exchange label:empty {
+	display: none;
+}
+
+.screen-card-main-menu .token-exchange label {
+	display: block;
+	margin:auto;
+	margin-left: 0.125em;
+	margin-right: 0.125em;
+	height: 50%;
+	padding: 0.5em;
+	display: flex;
+	flex-direction: column;
+	white-space: initial;
+	background-color: white;
+	border: 1px solid black;
+	border-radius: 0.5em;
+	color: black;
+}
+
+.screen-card-main-menu .token-exchange label p {
+	font-size: 0.45rem;
+	margin: 0.5em;
+	margin-top: 0;
+}
+
+.screen-card-main-menu .token-exchange button {
+	border: 1.125px solid #333;
+	border-radius: 5px;
+	border-top-right-radius: 0;
+	border-top-left-radius: 0;
+	border-top: 0;
+	background-color: #BBB;
+	width: 160px;
+	box-sizing: content-box;
+	margin: 0;
+	padding: 0.25rem;
+	font-size: 0.5rem;
+	font-weight: bold;
+}
+
+.screen-card-main-menu .token-exchange textarea {
+	border: 1.125px solid #333;
+	padding: 0.25rem;
+	font-size: 0.25rem;
+	box-sizing: content-box;
+	border-radius: 5px;
+	color: black !important
+	display: inline-block;
+	flex: 1;
+	min-height: 45px;
+	width: 160px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+	margin: 0;
+}
+
+
+.screen-card-main-menu .chat-output::-webkit-scrollbar,
+.screen-card-main-menu textarea::-webkit-scrollbar {
+  display: none;
+}
+
+.screen-card-main-menu .chatbox {
+	border: 1px solid #333;
+	border-radius: 5px;
+	background-color: white;
+	color: black;
+	position: absolute;
+	padding: 0.25rem;
+	font-size: 0.5rem;
+}
+
+.screen-card-main-menu .chatbox input,
+.screen-card-main-menu .chatbox button {
+	font-size: 0.5rem;
+	color: black;
+}
+
+.screen-card-main-menu .chatbox input {
+	flex: 1;
+	border: 1px solid #333;
+	border-radius: 3px;
+
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.screen-card-main-menu .chatbox button {
+	border: 1px solid #333;
+	border-radius: 3px;
+	border-left: 0;
+
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+.screen-card-main-menu .chatbox .chat-output {
+	height: 120px;
+	overflow-y: scroll;
+	width: 160px;
+}
+.screen-card-main-menu .chatbox .chat-output p {
+	white-space: initial;
+}
+
+.screen-card-main-menu .chatbox .chat-input {
+	display: flex;
+}
+
+.screen-card-main-menu .chatbox p {
+	margin: 0;
+	margin-bottom: 0.5em;
 }
