--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -617,3 +617,12 @@ input[type=number]::-webkit-outer-spin-button {
 	background-color: black;
 }
 
+.viewport section.full {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: calc(100% / var(--scale) );
+	height: calc(100% / var(--scale) );
+	transform-origin: top left;
+	background-color: transparent !important;
+}
