--- a/app/intro/card.css
+++ b/app/intro/card.css
@@ -52,6 +52,7 @@
 	white-space: pre;
 	text-align: center;
 	font-family: '8-bit-pusab';
+	font-size: 0.5rem;
 }
 
 .screen-card-sean-card.opening {
