--- a/app/ui/sheild-hud.css
+++ b/app/ui/sheild-hud.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	width: 48px;
+	width: 42px;
 	flex-wrap: wrap;
 	justify-content: space-around;
 	transform: scaleY(-1);
@@ -10,38 +11,36 @@
 }
 
 .sheild-hud .sheild-icon {
-	width: 16px;
-	height: 15px;
+	width: 14px;
+	height: 12px;
 	background-image: url(/Sonic/monitor-screens.png);
-
 	--sprite-offset-x: calc(calc(-16px * var(--screen-x)));
 	--sprite-offset-y: calc(calc(-16px * var(--screen-y)));
-
-	background-position: var(--sprite-offset-x) var(--sprite-offset-y);
-
+	background-position: calc(-1px + var(--sprite-offset-x)) calc(-2px + var(--sprite-offset-y));
 	transform: scaleY(-1);
-
-	transition: transform 0.2s ease-out, filter 0.1s ease-in, opacity 0.1s ease-in;
-
-	filter: saturate(0.25);
+	transition: transform 0.2s 0.1s ease-out, filter 0.3s ease-in, opacity 0.3s ease-in;
 	opacity: 0.25;
 }
 
 .sheild-hud .sheild-icon:not(.spacer) {
 	/*box-shadow: 1px 1px 0px #000000;*/
+	filter: saturate(0);
 }
 
 .sheild-hud .sheild-icon.sheild-fire {
+	transform: scaleY(-1) translateX(calc(-0px + 0%));
 	--screen-x: 1;
 	--screen-y: 2;
 }
 
 .sheild-hud .sheild-icon.sheild-water {
+	transform: scaleY(-1) translateY(calc(0px + 0%));
 	--screen-x: 2;
 	--screen-y: 2;
 }
 
 .sheild-hud .sheild-icon.sheild-electric {
+	transform: scaleY(-1) translateX(calc(0px + 0%));
 	--screen-x: 0;
 	--screen-y: 2;
 }
@@ -51,21 +50,18 @@
 }
 
 .sheild-hud.fire .sheild-icon.sheild-fire {
-	transition: transform 0.2s 0.1s ease-out, filter 0.1s ease-in, opacity 0.1s ease-in;
 	transform: scaleY(-1) translateX(-100%);
-	filter: none;
+	filter: saturate(15) contrast(2);
 	opacity: 1;
 }
 
 .sheild-hud.electric .sheild-icon.sheild-electric {
-	transition: transform 0.2s 0.1s ease-out, filter 0.1s ease-in, opacity 0.1s ease-in;
 	transform: scaleY(-1) translateX(100%);
-	filter: none;
+	filter: sepia(5) saturate(5) contrast(5);
 	opacity: 1;
 }
 
 .sheild-hud.water .sheild-icon.sheild-water {
-	transition: transform 0.2s 0.1s ease-out, filter 0.1s ease-in, opacity 0.1s ease-in;
 	transform: scaleY(-1) translateY(100%);
 	filter: none;
 	opacity: 1;
