--- a/app/intro/logo-splash.css
+++ b/app/intro/logo-splash.css
@@ -18,7 +18,7 @@ div.splash {
 	background-color: black;
 	align-content: center;
 	justify-content: center;
-	font-size: 70px;
+	font-size: 44pt;
 	color:#11559c;
 }
 
