--- a/app/actor/point-actor.css
+++ b/app/actor/point-actor.css
@@ -113,6 +113,10 @@
 	height: 32px;
 }
 
+.actor-item.actor-block .sprite.collapse {
+	filter: grayscale(85%) brightness(1.125);
+}
+
 .actor-item.actor-block .sprite,
 .actor-item.actor-block-marble .sprite {
 	background-image: url(/Sonic/marble-zone-block.png);
@@ -181,11 +185,16 @@
 	filter: brightness(5);
 }
 
+.actor-item.actor-question-block {
+	z-index: 1100;
+}
+
 .actor-item.actor-question-block .sprite {
 	background-image: url(/Sonic/question-block.png);
 	--sprite-offset-x: -16px;
 	--sprite-offset-y: -13px;
-	animation: monitor-flicker steps(4) infinite;
+	background-position: var(--sprite-offset-x) var(--sprite-offset-y);
+	animation: q-block-spin steps(4) infinite;
 	animation-duration: calc(1ms * 480);
 }
 
@@ -330,7 +339,7 @@
 	border-right: 4px solid var(--collColor);
 }
 
-@-webkit-keyframes ringSpin{
+@-webkit-keyframes ringSpin {
 	from{
 		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	}
@@ -339,7 +348,7 @@
 	}
 }
 
-@-webkit-keyframes ringTwinkle{
+@-webkit-keyframes q-block-spin {
 	from{
 		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	}
@@ -348,7 +357,16 @@
 	}
 }
 
-@-webkit-keyframes starPostActive{
+@-webkit-keyframes ringTwinkle {
+	from{
+		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
+	}
+	to{
+		background-position: calc(-256px + var(--sprite-offset-x)) var(--sprite-offset-y);
+	}
+}
+
+@-webkit-keyframes starPostActive {
 	from{
 		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	}
@@ -357,7 +375,7 @@
 	}
 }
 
-@-webkit-keyframes coinTwinkle{
+@-webkit-keyframes coinTwinkle {
 	from{
 		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	}
@@ -366,7 +384,7 @@
 	}
 }
 
-@-webkit-keyframes spin{
+@-webkit-keyframes spin {
 	from{
 		transform: rotate(0deg);
 	}
@@ -376,7 +394,7 @@
 }
 
 
-@-webkit-keyframes spin2x{
+@-webkit-keyframes spin2x {
 	from{
 		transform: rotate(0deg);
 	}
