--- a/app/ui/hud-frame.css
+++ b/app/ui/hud-frame.css
@@ -202,6 +202,11 @@
 
 .status-message .hud-character-string.hide {
 	opacity: 0;
+	display: none;
+}
+
+.status-message .hud-character-string.hidden {
+	display: none;
 }
 
 @keyframes sine {
